--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -6,7 +6,7 @@ description: Publish your GraphQL schemas to Apollo GraphOS using the Rover CLI 
 
 Whenever you make changes to a graph's schema, you should **publish** those changes to Apollo GraphOS using the [Rover CLI](/rover) or the [Platform API](/graphos/platform-api/). Doing so ensures that Apollo always has an up-to-date understanding of your graph.
 
-This page covers how to publish different kinds of schemas using the Rover CLI. Refer to the [Platform API](/graphos/platform-api/) reference for which operations to use for publication.
+This page covers how to publish different kinds of schemas using the Rover CLI. Consult the [Platform API](/graphos/platform-api/) reference to learn how to use the API for publication.
 
 ## Prerequisites
 
