fix broken links

--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -78,7 +78,7 @@ Add the OTLP Exporter (`@opentelemetry/exporter-trace-otlp-http` Node package) f
 
 ## Apollo Router setup
 
-To send traces from the Apollo Router to OpenTelemetry Collector, see [this article](/router/configuration/tracing#opentelemetry-collector-via-otlp).
+To send traces from the Apollo Router to OpenTelemetry Collector, see [this article](/router/configuration/telemetry/exporters/tracing/otlp).
 
 ## Prometheus setup
 
