--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -91,7 +91,7 @@ telemetry:
       endpoint: http://COLLECTOR_ADDRESS:4317
 ```
 
-For more information on configuration options, see the documentation on both [capturing metrics](/router/configuration/metrics#using-opentelemetry-collector) and [capturing traces](/router/configuration/tracing#opentelemetry-collector-via-otlp) using OpenTelemetry Collector.
+For more information on configuration options, see the documentation on both [capturing metrics](/router/configuration/telemetry/exporters/metrics/overview) and [capturing traces](/router/configuration/telemetry/exporters/tracing/overview) using OpenTelemetry Collector.
 
 ## Connecting directly
 
