fix broken links

--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -24,7 +24,7 @@ The Insights page presents operation and field metrics. It has two main sections
 - The collapsible left sidebar, where you can search, filter, and sort operations and fields
 - The main insights view, which displays [overall operations metrics](./operations#operation-metrics) by default, or field information and usage metrics for a single field once you select it from the left sidebar
 
-This guide focuses on field metrics and information. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](/operations#resolver-level-traces).
+This guide focuses on field metrics and information. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](./operations#resolver-level-traces).
 
 ## Field navigation
 
