--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -200,7 +200,7 @@ Turning off field-level instrumentation for a particular request has the followi
 
 - The request does not contribute to the "executions" statistic on the Insights page in Studio.
 - The request does not contribute to field-level execution timing hints that can be displayed in the [GraphOS Studio Explorer](../explorer) and VS Code.
-- The request does not produce a trace that can be viewed in the [Traces section](/operations#resolver-level-traces) of the Insights page in Studio.
+- The request does not produce a trace that can be viewed in the [Traces section](./operations#resolver-level-traces) of the Insights page in Studio.
 
 These requests still contribute to most features of Studio, such as schema checks, the Insights page, and the "Request" metrics on the Insights page.
 
