--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Preflight and operation scripts with the Explorer
+title: Preflight and operation scripts in the Explorer
 subtitle: Use custom scripts to manage auth flows and test response data
 description: Use preflight and operation scripts to manage authentication and validate GraphQL operations in the Apollo GraphOS Explorer.
 ---
@@ -20,7 +20,7 @@ You can define two different types of scripts:
   - Pre-operation scripts run before the operation executes.
   - Post-operation scripts run after the operation executes.
 
-If a user has defined and turned on all possible scripts for a particular operation, the order is as follows:
+If a team member has defined and turned on all possible scripts for a particular operation, the order is as follows:
 
 ```mermaid
 graph LR
@@ -50,9 +50,13 @@ graph LR
 
 ### Creating preflight scripts
 
-> For [protected variants](../graphs/studio-features/#protected-variants-enterprise-only), only organization members with the **Graph Admin** role can create or edit a variant's preflight script.
->
-> For _non_-protected variants, members with the **Contributor** role can also modify the preflight script.
+<Note>
+
+For [protected variants](../graphs/studio-features/#protected-variants-enterprise-only), only organization members with the **Graph Admin** role can create or edit a variant's preflight script.
+
+For _non_-protected variants, members with the **Contributor** role can also modify the preflight script.
+
+</Note>
 
 To create a preflight script:
 
@@ -82,7 +86,7 @@ To create a preflight script:
 
 6. When your script is ready, click **Save**. Studio stores your script.
 
-You're done! After you save your script, it's automatically loaded for any team member that uses the Explorer with the associated variant.
+That's it! After you save your script, it's automatically loaded for any team member that uses the Explorer with the associated variant.
 
 ### Turning off preflight scripts
 
@@ -101,9 +105,13 @@ To do so, toggle the switch to **OFF**.
 
 ### Creating operation scripts
 
-> You can only create operation scripts for operations that are saved in an [operation collection](./operation-collections/).
->
-> Only organization members with edit access to a particular operation collection can create or edit operation scripts for that collection.
+<Note>
+
+You can only create operation scripts for operations that are saved in an [operation collection](./operation-collections/).
+
+Only organization members [with edit access](../org/members/#role-permissions) to a particular operation collection can create or edit operation scripts for that collection.
+
+</Note>
 
 1. From the Explorer, open an operation from the Operation Collections menu:
 
@@ -149,7 +157,7 @@ To do so, toggle the switch to **OFF**.
 
 ### Turning on operation scripts
 
-By default, operation scripts are **off** for each individual user. Users can turn on operation scripts from the Explorer's Settings tab:
+By default, operation scripts are **off** for each individual team member. Individuals can turn on operation scripts from the Explorer's Settings tab:
 
 <img
   class="screenshot"
@@ -160,9 +168,9 @@ By default, operation scripts are **off** for each individual user. Users can tu
 
 ## Chaining operations
 
-A script can use the [`explorer.runOperation`](#explorerrunoperation) function to execute _another_ operation that's saved in a collection. That operation might in turn have its _own_ script, which can _also_ call `explorer.runOperation`.
+A script can use the [`explorer.runOperation`](#explorerrunoperation) function to execute _another_ operation that's saved in a collection. That operation might have its _own_ script, which can _also_ call `explorer.runOperation`.
 
-You can use this mechanism to chain together a sequence of operations for more advanced authentication flows.
+You can use this mechanism to chain together a sequence of operations for more advanced workflows.
 
 ## Scripting API reference
 
@@ -329,7 +337,7 @@ This exposes the `crypto-js` package for use within your script. For available f
 
 ### Operation Scripts
 
-Here is a small example that runs an operation and sets an environment variable for use on future operations:
+Here is a small example that runs an operation and sets an environment variable for use in future operations:
 
 ```js
 const response = await explorer.runOperation({
