fix broken links

--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -82,7 +82,7 @@ At the end of the trial, you can contact Apollo to upgrade your organization to 
 
 When your Enterprise trial period ends, your trial organization becomes _locked_ unless you contact Apollo to upgrade to a full Enterprise organization (you can upgrade any time before _or_ after the trial period ends).
 
-You can't access a locked organization from GraphOS Studio, and GraphOS stops serving supergraph schemas and [Enterprise entitlements](/router/enterprise-features#the-enterprise-entitlement) to your [self-hosted routers](../quickstart/self-hosted/).
+You can't access a locked organization from GraphOS Studio, and GraphOS stops serving supergraph schemas and [Enterprise license](/router/enterprise-features#the-enterprise-license) to your [self-hosted routers](../quickstart/self-hosted/).
 
 ## Legacy plans
 
